feat: API + Doc
